--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* styles.css */
 /* General styles */
 body {
     background-color: #F5F5F5;
@@ -9,7 +8,7 @@ body {
 }
 
 header {
-    background: linear-gradient(135deg, #72EDF2 10%, #5151E5 100%);
+    background: linear-gradient(135deg, #7e7e7e, #000);
     color: #FFF;
     padding: 3em 0;
     text-align: center;
@@ -38,12 +37,17 @@ nav ul li a:hover {
     text-decoration: underline;
 }
 
+nav ul li a.active {
+    color: #FFF;
+    text-decoration: underline;
+}
+
 main {
     padding: 2em;
 }
 
 h1, h2 {
-    color: #000;
+    color: #FFF;
 }
 
 /* About section */
@@ -92,7 +96,7 @@ h1, h2 {
 }
 
 /* Icon styling */
-.skill-icon, .contact-icon {
+.skill-icon, .project-icon {
     color: #228B22; /* Dark Green */
 }
 
@@ -100,8 +104,8 @@ h1, h2 {
     margin-bottom: 10px;
 }
 
-.contact-icon {
-    margin-right: 10px;
+.project-icon {
+    margin-bottom: 10px;
 }
 
 .text-dark-green {
@@ -126,6 +130,22 @@ footer {
 
 #contact .text-dark-green {
     margin-right: 10px;
+}
+
+/* Carousel adjustments */
+.carousel-inner .carousel-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    width: 5%;
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    background-color: #333;
 }
 
 /* Responsive adjustments */
