--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ header h1, header p {
 }
 
 .card-title {
-    color: #4CAF50;
+    color: #33704C;
     font-size: 1.25em;
     margin-bottom: 0.5em;
 }
@@ -174,7 +174,7 @@ header h1, header p {
 }
 
 .owl-carousel .item h3 {
-    color: #4CAF50;
+    color: #33704C;
     margin-bottom: 10px;
 }
 
